--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -14,7 +14,7 @@
   <button id="newQuote">Show New Quote</button>
   <div id="quoteFormContainer"></div>
   <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
-  <button onclick="exportToJsonFile()">Export Quotes</button>
+  <button onclick="syncQuotes()">Export Quotes</button>
 
   <script src="script.js"></script>
 </body>
